crates/mecojoni-core/tests/fixtures/invalid/body-unicode-rule.meco
---
meco: 1.0
module: invalid
---

# naïve
- Hello.
